# leptos-tictactoe

./: .gitignore  Cargo.toml  Dockerfile  README.md  index.html  inputs.css  package-lock.json  tailwind.config.js
src/: about.rs  main.rs  tictactoe.rs
src/components/: mod.rs  navbar.rs  tictactoe_component.rs  weather_component.rs
style/: output.css
