[package]
name = "leptos-tictactoe"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.15", features = ["csr"] }
leptos_router = { version = "0.6.15", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"

# For web requests, use web-sys instead of reqwest
gloo-net = "0.5.0"  # Web-friendly alternative to reqwest
dotenv = "0.15.0"
thiserror = "1.0.65"

# Only include tokio in dev-dependencies for testing
[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tokio-test = "0.4"
